# turboquant-bench

./: .gitignore  README.md  pyproject.toml
benchmarks/: bench_compare.py  bench_long_context.py  bench_niah.py
src/mlx_turboquant/: __init__.py  benchmark.py  cache.py  cli.py  generate.py  patch.py
src/tq_bench/: __init__.py  cli.py  compare.py  report.py
src/turboquant_mac/: __init__.py  codebook.py  kv_cache.py  quantizer.py  rotation.py
src/turboquant_mac/backends/: __init__.py  metal_kernels.py  mlx_backend.py  pytorch_backend.py
src/turboquant_mac/backends/metal/: __init__.py  mse_score.py  qjl_score.py
src/turboquant_mac/codebooks/: codebook_d128_b1.json  codebook_d128_b2.json  codebook_d128_b3.json  codebook_d128_b4.json  codebook_d256_b3.json  codebook_d576_b3.json  codebook_d64_b1.json  codebook_d64_b2.json  codebook_d64_b3.json  codebook_d64_b4.json
tests/test_mlx_turboquant/: test_cache.py
tests/test_turboquant_mac/: conftest.py  test_codebook.py  test_kv_cache.py  test_metal_kernels.py  test_quantizer.py  test_rotation.py
